--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,3 +3,17 @@
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=C13C1D634365E691E13435BBF21D20E1
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
