Improved movement functionality & character initialization

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,10 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/Wizard/Maps/Nildum.Nildum
+EditorStartupMap=/Game/Wizard/Maps/Nildum.Nildum
+GameInstanceClass=/Script/Wizard.WizardGameInstance
+TransitionMap=/Game/Wizard/Maps/TransitionMap.TransitionMap
+ServerDefaultMap=/Game/Wizard/Maps/Nildum.Nildum
+
