--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Wizard/Maps/Nildum.Nildum
+GameDefaultMap=/Game/Wizard/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Wizard/Maps/Nildum.Nildum
 GameInstanceClass=/Script/Wizard.WizardGameInstance
 TransitionMap=/Game/Wizard/Maps/TransitionMap.TransitionMap
